update of service